# Seabattle-network-game

./: CMakeLists.txt  README.md  conanfile.py
src/: CMakeLists.txt  battlefield.h  client.cpp  handlegame.h  main  main.cpp  network.h  server.cpp
src/core/: field.cpp  field.h  handlegame.cpp  handlegame.h  network.cpp  network.h
